adjust mobile and desktop view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="main-container">
         <div class="left-col">
-            
+            <img src="./imgs/image-product-mobile.jpg" alt="" class="mobile-prod" >
         </div>
         <div class="right-col">
             <h5>Perfume</h5>
@@ -25,9 +25,9 @@
                 <div class="price">$169.99</div>
             </div>
 
-            <button class="btn-cart"> 
-                <img src="./imgs/icon-cart.svg" class="cart"> Add to Cart</button>
-
+            <button class="btn-cart">
+                <img src="./imgs/icon-cart.svg" class="cart"> Add to Cart
+            </button>
         </div>
     </section>
 </body>
